# cmake-test

./: .gitignore  README.md
step0/: CMakeLists.txt  README.md  utils.cpp  utils.hpp
step1/: CMakeLists.txt  README.md  utils.cpp
step2/: CMakeLists.txt  README.md  utils.hpp
step3/: CMakeLists.txt  README.md  utils.cu
step4/: CMakeLists.txt  README.md  main.cpp
step5/: CMakeLists.txt  README.md
